# yandex-messenger-bot-api

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: api-inconsistencies.md  architecture-design.md  pypi-publishing.md
tests/: conftest.py  mocked_bot.py  test_bot.py  test_dispatcher.py  test_exceptions.py  test_filters.py  test_fsm.py  test_methods.py  test_middleware.py  test_polling.py  test_types.py  test_webhook.py
yandex_messenger_bot/: __init__.py  context.py  enums.py  exceptions.py  loggers.py
yandex_messenger_bot/client/: __init__.py  bot.py
yandex_messenger_bot/client/session/: __init__.py  aiohttp.py  base.py
yandex_messenger_bot/di/: __init__.py  inject.py  provider.py
yandex_messenger_bot/dispatcher/: __init__.py  dispatcher.py  event_observer.py  handler.py  router.py
yandex_messenger_bot/dispatcher/middlewares/: __init__.py  base.py
yandex_messenger_bot/filters/: __init__.py  base.py  callback.py  command.py  magic.py  state.py
yandex_messenger_bot/fsm/: __init__.py  context.py  middleware.py  state.py  strategy.py
yandex_messenger_bot/fsm/storage/: __init__.py  base.py  memory.py
yandex_messenger_bot/methods/: __init__.py  base.py  create_chat.py  create_poll.py  delete_message.py  get_file.py  get_poll_results.py  get_poll_voters.py  get_updates.py  get_user_link.py  self_update.py  send_file.py  send_gallery.py  send_image.py  send_text.py  update_members.py
yandex_messenger_bot/polling/: __init__.py  polling.py
yandex_messenger_bot/types/: __init__.py  base.py  bot_request.py  bot_self.py  button.py  chat.py  file.py  forward.py  input_file.py  poll.py  update.py  user.py  user_link.py
yandex_messenger_bot/webhook/: __init__.py  aiohttp_server.py
