[project]
name = "yandex-messenger-bot-api"
version = "0.1.0"
description = "Modern and fully asynchronous framework for Yandex Messenger Bot API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "pydantic>=2.13.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]

[tool.ruff.lint]
select = [
    # "C", # TODO: mccabe - code complecity
    "A", # flake8-annotations
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "PERF", # perflint
    "PL", # pylint
    "Q", # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "T10", # flake8-debugger
    "T20", # flake8-print
    "UP", # pyupgrade
]
