[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yandex-messenger-bot"
version = "0.1.0"
description = "Modern and fully asynchronous framework for Yandex Messenger Bot API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.13.5",
    "magic-filter>=1.0.12",
    "pydantic>=2.13.0",
]

[project.urls]
Repository = "https://github.com/arielen/yandex-messenger-bot-api"

[tool.hatch.version]
path = "yandex_messenger_bot/_meta.py"

[dependency-groups]
dev = [
    "pre-commit>=4.2",
    "ruff>=0.15.10",
    "ty>=0.0.30",
]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
target-version = "py312"
line-length = 99
extend-exclude = ["_reference_*"]

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "PERF", # perflint
    "PL",   # pylint
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "UP",   # pyupgrade
]
ignore = [
    "PLR0913", # too many arguments — unavoidable in API wrapper SDK
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004", # magic values in test assertions are fine
    "PLC0415", # imports inside test functions are fine
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["yandex_messenger_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
